syntax = "proto3";

package main;
option java_package = "ucab.sqa.workit.probobuf";
option go_package = "./proto";

service trainingAPI{
    rpc Save(TrainingCreated) returns (Response){}
    rpc Update(TrainingUpdated) returns(Response){}
    rpc Delete(TrainingDeleted) returns (Response){}
    rpc SaveVideo(TrainingVideoCreated) returns (Response){}
    rpc DeleteVideo(TrainingVideoDeleted) returns (Response){}
    rpc DeleteByTrainer(TrainerDeleted) returns (Response) {}
}

service routineAPI{
    rpc Save(RoutineCreated) returns (Response){}
    rpc Update(RoutineUpdated) returns(Response){}
    rpc Delete(RoutineDeleted) returns (Response){}
    rpc AddTraining(TrainingAdded) returns (Response){}
    rpc RemoveTraining(TrainingRemoved) returns (Response){}
    rpc DeleteByParticipant(ParticipantDeleted) returns (Response) {}
    rpc ChangeParticipant(ParticipantChanged) returns (Response) {}
}

message Response{
    string msg = 1;
}

message TrainingCreated{
    string id = 1;
    repeated string categories = 2;
    string trainerId = 3;
    string name = 4;
    string description = 5;
    string videoId = 6;
}

message TrainingUpdated{
    string id = 1;
    repeated string categories = 2;
    string trainerId = 3;
    string name = 4;
    string description = 5;
}

message TrainingDeleted{
    string id = 1;
}

message TrainingVideoCreated{
    string id = 1;
    string trainingId = 2;
    string name = 3;
    string ext = 4;
    bytes video = 5;
}

message TrainingVideoDeleted{
    string id = 1;
}

message TrainerDeleted {
    string id = 1;
}

message RoutineCreated{
    string id = 1;
    string name = 2;
    string userId = 3;
    string description = 4;
    repeated string trainingsId = 5;
}

message RoutineUpdated{
    string id = 1;
    string name = 2;
    string userId = 3;
    string description = 4;
    repeated string trainingsId = 5;
}

message RoutineDeleted{
    string id = 1;
}

message TrainingAdded{
    string routineId = 1;
    string trainingId = 2;
    int32 order = 3;
}

message TrainingRemoved{
    string routineId = 1;
    string trainingId = 2;
}

message ParticipantDeleted {
    string id = 1;
}

message ParticipantChanged {
    string oldId = 1;
    string newId = 2;
}